--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="conteiner">
+    <div class="container header-container">
         <div class="row">
             <div class="col">
                 
@@ -13,14 +13,14 @@
 
 {% block content %}
     <div class="container h-100">
-        <div class="row">
+        <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-black">
                     The new collections are here
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
                             Shop Now
                         </a>
                     </h4>
